--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ main {
 
 	align-items: center;
 	justify-content: center;
-	font-size: 200%;
+	font-size: 3vh;
 
 	aspect-ratio: 1/1 !important;
 	border: 1px dashed #555;
